--- a/css/meanmenu.css
+++ b/css/meanmenu.css
@@ -5,7 +5,7 @@ a.meanmenu-reveal {
 }
 
 .mean-container .mean-bar {
-     background: #ffffff;;
+     background: rgb(255, 255, 255);
      float: left;
      min-height: 40px;
      padding: 0;
