--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@ ul, li, ol {
     color: #fff;
 }
 
-.mean-container .mean-bar { background: #2aab7c;}
+.mean-container .mean-bar { background: #ffffff;}
 
 
 .web_taital{
